# FastAPI-example

./: .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
DB/: Dockerfile
alembic/: env.py
alembic/versions/: 98c3bdf0bbc3_initial_migration.py
app/: db.py  main.py  models.py
app/core/: config.py
app/models/: models.py
auth/: auth.py  database.py  manager.py  schemas.py
migrations/: env.py
migrations/versions/: 0d79a3eb8d4f_db_creation.py  5a013ccb0486_db_creation.py  b32ee7e18f7a_db_init.py  eb4081f18a0e_db_creation.py
models/: auth_models.py  models.py
