[tool.poetry]
name = "InternHub"
version = "0.2.01"
description = "InternHub"
authors = ["Eduard Momot <flancern@gmail.com>", "Val Kurta  <valentyn.kurta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "0.23.2"
pydantic = "2.5.0"
requests = "^2.22.0"
loguru = "^0.7.0"
joblib = "^1.2.0"
scikit-learn = "^1.2.0"
fastapi = "^0.103.0"
fastapi-admin = "1.0.4"
fastapi-cache2 = "0.2.0"
fastapi-users = "10.3.0"
fastapi-users-db-sqlalchemy = "4.0.4"
fastapi_amis_admin = "0.4.2"
fastapi_user_auth = "0.4.2"
alembic = "^1.9.2"
psycopg2-binary = "^2.9.5"
python-dotenv = "^0.21.0"
asyncpg = "^0.27.0"
SQLAlchemy = "^2.0.23"
sqlalchemy_database = "^0.1.1"
flake8 = "^6.1.0"
pre-commit = "^3.5.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
black = {version = "^19.10b0", allow-prereleases = true}
autopep8 = "^2.0.0"
ipdb = "^0.13.0"
pylint = "^3.0.0"

[tool.poetry.group.aws]
optional = true

[tool.poetry.group.aws.dependencies]
mangum = "^0.17.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
    /(
        \.git
      | \.hg
      | \.mypy_cache
      | \.tox
      | \.venv
      | _build
      | buck-out
      | build
      | dist

      # The following are specific to Black, you probably don't want those.
      | blib2to3
      | tests/data
    )/
'''